2007-01-29 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 365: allow debayering of MONO8 and MONO16 formats.
	           Thanks to Matthias Barkhoff.

2007-01-30 David Moore http://davemoore.org/
	* SVN 364: pkgincludedir fix below still wasn't quite right

2007-01-29 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 363: fix the definition pkgincludedir in configure.in
	           Thanks to Frederic Devernay.

2007-01-27 David Moore http://davemoore.org/
	* SVN 362: Apply patch from Matt Robinson for the Mac OS capture
	           routine to wait for thread creation with a semaphore.

2007-01-24 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 361: Set some variables to zero to avoid valgrind errors.
	           Thanks to Jon Schewe.
	* SVN 360: Fixed strobe control register offset. Thanks again to
	           Matthias Hanel.
	* SVN 359: don't require cameras (>=1.31) to have a data depth
	           register. Thanks to Matthias Hanel.
	* SVN 358: fixed YUV422 byte order. Thanks to Thomas Woellert.
	
2007-01-22 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 357: use only format7mode0 in the example program
	           grab_partial_image. Remove the unused definition of
		   dc1394ring_buffer_policy_t. Thanks to Damien Delannay.

2007-01-22 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 356: reverse the order of entries in the ChangeLog and reformat
		   some (mine-)fields. Changed most email addresses to URLs to
		   avoid spam. Changed the format of the dates too.

2007-01-20 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 355: release 2.0.0-rc5

2007-01-20 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 354: Added Parallel Input/Output (PIO) functions. Prepared some
	  	   support functions for SIO and strobe control. Misc cleanups.
	* SVN 353: Remove the check of err_flag_2 for now: it seems not to work
	  	   proprely. (Thanks to Damien Delannay)
	* SVN 352: fix coherency of the format_7 mode used in