@@ -1,4 +1,8 @@
 2007-01-29 Damien Douxchamps http://damien.douxchamps.net/
+	* SVN 366: bayer downsampling function now take the INPUT image
+	           size as argument. It used to take the OUTPUT image size
+		   as argument but this is counter intuitive. 
+	           Thanks to Matthias Barkhoff.
 	* SVN 365: allow debayering of MONO8 and MONO16 formats.
 	           Thanks to Matthias Barkhoff.
 
